--- a/sertificate.html
+++ b/sertificate.html
@@ -13,9 +13,43 @@
     }
 
     body {
-      background-color: #000000; /* Warna hitam solid */
+      background-color: #000000;
       color: white;
       min-height: 100vh;
+    }
+
+    /* Animasi */
+    @keyframes fadeSlideDown {
+      0% {
+        opacity: 0;
+        transform: translateY(-30px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeSlideUp {
+      0% {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeScaleIn {
+      0% {
+        opacity: 0;
+        transform: scale(0.9);
+      }
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
 
     header {
@@ -29,6 +63,7 @@
       top: 0;
       width: 100%;
       z-index: 10;
+      animation: fadeSlideDown 1s ease forwards;
     }
 
     .logo {
@@ -67,7 +102,7 @@
     }
 
     .sertifikat-box {
-      background: linear-gradient(135deg, #e52d27, #b31217); /* MERAH GRADASI */
+      background: linear-gradient(135deg, #e52d27, #b31217);
       padding: 20px 30px;
       border-radius: 15px;
       width: 80%;
@@ -77,6 +112,10 @@
       transition: transform 0.3s ease;
       text-align: left;
       text-decoration: none;
+
+      opacity: 0;
+      transform: scale(0.9);
+      animation: fadeScaleIn 0.6s ease forwards;
     }
 
     .sertifikat-box:hover {
@@ -94,6 +133,20 @@
       opacity: 0.9;
     }
 
+    /* Delay animasi per sertifikat */
+    .sertifikat-container a:nth-child(1) { animation-delay: 0.1s; }
+    .sertifikat-container a:nth-child(2) { animation-delay: 0.2s; }
+    .sertifikat-container a:nth-child(3) { animation-delay: 0.3s; }
+    .sertifikat-container a:nth-child(4) { animation-delay: 0.4s; }
+    .sertifikat-container a:nth-child(5) { animation-delay: 0.5s; }
+    .sertifikat-container a:nth-child(6) { animation-delay: 0.6s; }
+    .sertifikat-container a:nth-child(7) { animation-delay: 0.7s; }
+    .sertifikat-container a:nth-child(8) { animation-delay: 0.8s; }
+    .sertifikat-container a:nth-child(9) { animation-delay: 0.9s; }
+    .sertifikat-container a:nth-child(10) { animation-delay: 1.0s; }
+    .sertifikat-container a:nth-child(11) { animation-delay: 1.1s; }
+    .sertifikat-container a:nth-child(12) { animation-delay: 1.2s; }
+
     footer {
       background-color: #111;
       color: white;
@@ -108,6 +161,7 @@
       gap: 25px;
       font-size: 16px;
       border-top: 2px solid red;
+      animation: fadeSlideUp 1s ease forwards;
     }
 
     footer a {
