--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   <header>
     <div class="logo">ANDIKA</div>
     <nav>
-      <a href="home.html">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="about.html">ABOUT</a>
       <a href="experience.html">EXPERIENCE</a>
       <a href="skill.html">SKILL</a>
