--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
   <header>
     <div class="logo">ANDIKA</div>
     <nav>
-      <a href="home.html">HOME</a>
+      <a href="index.html">HOME</a>
       <a href="about.html" class="active">ABOUT</a>
       <a href="experience.html">EXPERIENCE</a>
       <a href="skill.html">SKILL</a>
