--- a/about.html
+++ b/about.html
@@ -61,6 +61,7 @@
     .about-container {
       display: flex;
       align-items: center;
+      justify-content: center;
       border-top: 3px solid red;
       border-bottom: 3px solid red;
       padding: 40px 30px;
