--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
     <a href="https://www.linkedin.com/in/andika-58905a28a" target="_blank">
       <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
     </a>
-    <a href="https://www.instagram.com/_kaa_aja?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+    <a href="https://www.instagram.com/_andika.saja?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
       <img src="image/ig.png" alt="Instagram" width="20"> Instagram
     </a>
   </footer>
